Add Planespotters data: Bill Gates (N459BL), Clearlake Capital (N121CL), and 7 more jets
Scraped Planespotters.net for owner verification:
- N459BL: Bill Gates - G650ER delivered Feb 2025 (prev N194WM)
- N121CL: Clearlake Capital Group - Global 7500 S/N 70165 (was marked unknown)
- N502VJ: Vista America/Jet Select - Global 5000 S/N 9608
- N5GF: SDL Gulfstream LLC - G-IV S/N 1277
- N512CC: Private - G-IV SP S/N 1446
- N779LD: Private - G-IV SP S/N 1238
- N926SS: Private - Challenger 604 S/N 5436
- N719JB: Private - Learjet 60
- N200JW: Private - Falcon 2000 S/N 128

Dashboard updated to show serial numbers, delivery dates, and Planespotters verification badge.

--- a/index.html
+++ b/index.html
@@ -666,8 +666,11 @@
                         <div style="color: #ffe66d; font-size: 13px; line-height: 1.5;">${ownerInfo.likelyPassenger}</div>
                     </div>
                     ` : ''}
+                    ${ownerInfo.serialNumber ? `<div class="detail-row"><span class="detail-label">Serial Number</span><span class="detail-value">${ownerInfo.serialNumber}</span></div>` : ''}
+                    ${ownerInfo.deliveryDate ? `<div class="detail-row"><span class="detail-label">Delivered</span><span class="detail-value">${ownerInfo.deliveryDate}</span></div>` : ''}
+                    ${ownerInfo.previousReg ? `<div class="detail-row"><span class="detail-label">Previous Reg</span><span class="detail-value">${ownerInfo.previousReg}</span></div>` : ''}
                     ${ownerInfo.notes ? `<div style="color: #888; font-size: 12px; margin-top: 10px; font-style: italic;">📝 ${ownerInfo.notes}</div>` : ''}
-                    <div style="color: #666; font-size: 11px; margin-top: 8px;">Source: ${ownerInfo.sources ? ownerInfo.sources.join(', ') : 'FAA Registry'}</div>
+                    <div style="color: #666; font-size: 11px; margin-top: 8px;">Source: ${ownerInfo.sources ? ownerInfo.sources.join(', ') : 'FAA Registry'}${ownerInfo.planespottersVerified ? ' • ✓ Planespotters verified' : ''}</div>
                 </div>
                 `;
             }
